Fixed Android EPG channelname layout problem

--- a/frontend/android/styles/dvbi.scss
+++ b/frontend/android/styles/dvbi.scss
@@ -229,7 +229,7 @@ body.player {
       font-size: 1.5em;
       margin-top: 0.5em;
       margin-bottom: 0.5em;
-      padding-right: 0.5em;     
+      padding-right: 0.2em;     
     }
     .chname {
       font-size: 1.5em;
